--- a/src/index.html
+++ b/src/index.html
@@ -29,32 +29,34 @@
 							<!-- Photo Galleries -->
 								<div class="gallery">
 									<header class="special">
-										<h2>Projects</h2>
+										<h2>Updates</h2>
 									</header>
 									<div class="content">
-										<div class="media">
-											<a href="./images/IMG_0004.jpg"><img src="./images/IMG_0004.jpg" alt="" title="This right here is a caption." /></a>
+                    <div class="media">
+											<a href="./images/IMG_0001.jpg"><img src="./images/IMG_0001.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/05.jpg"><img src="images/thumbs/05.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/lily-banse-403692-unsplash-sm-sq.jpg"><img src="images/lily-banse-403692-unsplash-sm-sq.jpg" alt="" title="This right here is a caption." /></a>
+										</div>
+
+										<div class="media">
+											<a href="./images/fulls/IMG_0406.jpg"><img src="./images/thumbs/IMG_0406_sq.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/fulls/IMG_0407.jpg"><img src="images/thumbs/IMG_0407_sq.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/alexander-popov-342444-unsplash-sq.jpg"><img src="images/alexander-popov-342444-unsplash-sq.jpg" alt="" title="This right here is a caption." /></a>
+										</div>
+
+										<div class="media">
+											<a href="images/IMG_0567.jpg"><img src="images/IMG_0567.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/IMG_0003.jpg"><img src="images/IMG_0003.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" title="This right here is a caption." /></a>
-										</div>
-										<div class="media">
-											<a href="images/fulls/03.jpg"><img src="images/thumbs/03.jpg" alt="" title="This right here is a caption." /></a>
-										</div>
-										<div class="media">
-											<a href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/IMG_0006_n.jpg"><img src="images/IMG_0006_n.jpg" alt="" title="This right here is a caption." /></a>
 										</div>
 									</div>
 									<footer>
@@ -71,10 +73,8 @@
 									<p>Mus sed interdum nunc dictum rutrum scelerisque erat a parturient condimentum potenti dapibus vestibulum condimentum per tristique porta. Torquent a ut consectetur a vel ullamcorper a commodo a mattis ipsum class quam sed eros vestibulum quisque a eu nulla scelerisque a elementum vestibulum.</p>
 									<p>Aliquet dolor ultricies sem rhoncus dolor ullamcorper pharetra dis condimentum ullamcorper rutrum vehicula id nisi vel aptent orci litora hendrerit penatibus erat ad sit. In a semper velit eleifend a viverra adipiscing a phasellus urna praesent parturient integer ultrices montes parturient suscipit posuere quis aenean. Parturient euismod ultricies commodo arcu elementum suspendisse id dictumst at ut vestibulum conubia quisque a himenaeos dictum proin dis purus integer mollis parturient eros scelerisque dis libero parturient magnis.</p>
 									<h3>Follow Me</h3>
-									<ul class="icons">
-										<li><a href="#" class="icon"><i class="fab fa-twitter"></i><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon"><i class="fab fa-facebook"></i><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon"><i class="fab fa-instagram"></i><span class="label">Instagram</span></a></li>
+									<ul class="icons" style="font-size:1.6rem">
+										<li><a href="https://github.com/kessiekwang" class="icon" target="_blank"><i class="fab fa-github-alt"></i><span class="label">github</span></a></li>
 									</ul>
 								</div>
 
