change updates section

--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,13 @@
 								<h1>Hello, World Wide Web</h1>
 								<p>{{ title }} in da house !!</p>
 								<ul class="actions">
-									<li><a href="#galleries" class="button alt scrolly big">Continue</a></li>
+									<li><a href="#updates" class="button alt scrolly big">Continue</a></li>
 								</ul>
 							</div>
 						</section>
 
 					<!-- Gallery -->
-						<section id="galleries">
+						<section id="updates">
 
 							<!-- Photo Galleries -->
 								<div class="gallery">
